Fixed some typos.

--- a/windows-pip-compilation.html
+++ b/windows-pip-compilation.html
@@ -38,7 +38,7 @@
             <li>Installed Build Tools for Visual Studio 2022, including the Windows 11 SDK - see selected options in screenshot<br/>
                 <img alt="Build Tools for Visual Studio 2022 - installation screen" src="img/build-tools-for-visual-studio-2022.png"/></li>
             <li>Using Winget, installed 'Rustlang.Rustup', version '1.27.1'</li>
-            <li><b>Now restart the ConEmu terminal to pick up the MSVC and Rust settings.  You will nee to 'activiate' the Python virtual environment again</b></li>
+            <li><b>Now restart the ConEmu terminal to pick up the MSVC and Rust settings.  You will need to 'activate' the Python virtual environment again</b></li>
             <li>The paths for MSVC have to be set up, as well as compiler hints for 'pip'.  There is nothing to do for Rust.</li>
             <li><pre>set CC=cl</pre></li>
             <li><pre>set CXX=cl</pre></li>
